methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:27: error: not found: value c
     faireV(c); forward; left(); 
            ^