methods.picture.MethodsPicture.scala.code
override def run() {
  for (compteur <-1 to 3) {
    ligne();
  }
}


def ligne() {
  for (compteur <-1 to 3) {
    carre(); 
    for (compteur <- 1 to 6) {
      forward();
    }
  }
  for (compteur <-1 to 15) {
    backward();
  }
  left();
  for (compteur <- 1 to 5) {
    forward();
  }
  right();
}

def carre() {
  for (compteur <- 1 to 4) {
     faireV(c); forward; left(); 
  }
  backward();
}


def faireV(c:Color) {
    setCouleurBrosse(c); forward(); brushDown(); brushUp(); left(); forward(); right(); forward(); brushDown(); brushUp(); forward(); right(); forward(); brushDown(); brushUp(); left();
}